--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^1.3.0",
         "postcss": "^8.5.6",
-        "tailwindcss": "^4.1.11",
+        "tailwindcss": "^3.4.3",
         "vite": "^7.0.3"
+    },
+    "dependencies": {
+        "@tailwindcss/vite": "^4.1.11"
     }
 }
