--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/tinker": "^2.8",
         "league/csv": "^9.22",
         "maatwebsite/excel": "^3.1",
+        "spatie/image-optimizer": "^1.8",
         "tymon/jwt-auth": "^2.1"
     },
     "require-dev": {
